# ChangeLog file for MonetDB
# This file is updated with Maddlog

* Mon Feb  2 2015 Sjoerd Mullender <sjoerd@acm.org>
- Changed interfaces of a lot of GDK-level functions.  When they modify a
  BAT, don't return the same BAT or NULL, but instead return GDK_SUCCEED
  or GDK_FAIL.

* Tue Oct 28 2014 Sjoerd Mullender <sjoerd@acm.org>
- Changed a bunch of hash-related functions to work on the tail column.
  The functions that have been changed to work on the tail column are:
  BAThash, BATprepareHash, HASHgonebad, HASHins, and HASHremove.
