@@ -1,6 +1,9 @@
 # ChangeLog file for MonetDB
 # This file is updated with Maddlog
 
+* Wed Feb  4 2015 Sjoerd Mullender <sjoerd@acm.org>
+- BUNtvar and BUNhvar macros no longer work for TYPE_void columns.
+
 * Mon Feb  2 2015 Sjoerd Mullender <sjoerd@acm.org>
 - Changed interfaces of a lot of GDK-level functions.  When they modify a
   BAT, don't return the same BAT or NULL, but instead return GDK_SUCCEED
